# fire

./: .clang-format  CMakeLists.txt
cmake/: project_settings.cmake
include/fire/: parser.hpp  types.hpp
src/: parser.cpp
test/: CMakeLists.txt  parser_test.cpp
